# oxiblog.rs

./: .gitignore  Cargo.toml  README.md
examples/blog/: first_blog.md  second_blog.md
examples/projects/: first_project.md  second_project.md
src/: main.rs
