[package]
name = "oxiblog"
version = "0.1.1"
edition = "2021"
authors = ["Jonas Winkelmann"]
license = "MIT"
description = "A tool to create a sql file to fill a database for your blog"
readme = "README.md"
homepage = "https://github.com/Jooonnnaass/oxiblog.rs"
repository = "https://github.com/Jooonnnaass/oxiblog.rs"
keywords = ["cli", "generation", "blog"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.95"
clap = {version="4.5.28", features=["derive"]}
pulldown-cmark = "0.12.2"
serde = {version="1.0.217", features=["derive"]}
serde_yaml = "0.9.34"
walkdir = "2.5.0"
